Add Get /tags API
