# swagger.yaml
@@ -111,6 +111,34 @@ paths:
           description: Not Acceptable.
           schema:
             $ref: '#/definitions/NotAcceptableEntityError'
+  /tags:
+    get:
+      tags:
+        - tags
+      summary: Fetch tags
+      description: ''
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: limit
+          in: query
+          description: 取得件数
+          required: false
+          type: number
+          default: 5
+        - name: offset
+          in: query
+          description: オフセット
+          required: false
+          type: number
+          default: 0
+      responses:
+        '200':
+          description: success
+          schema:
+            $ref: '#/definitions/Tags'
 definitions:
   Article:
     type: object
@@ -151,6 +179,23 @@ definitions:
         type: integer
       name:
         type: string
+  Tags:
+    type: object
+    properties:
+      tags:
+        type: array
+        items:
+          $ref: '#/definitions/Tag'
+      isNext:
+        type: boolean
+      nextOffset:
+        type: integer
+      limit:
+        type: integer
+        description: リクエストに設定されたlimit
+      offset:
+        type: integer
+        description: リクエストに設定されたoffset
   AddArticle:
     type: object
     properties:
